--- a/src/Screens/TrailBalance/OptionModal.css
+++ b/src/Screens/TrailBalance/OptionModal.css
@@ -28,26 +28,30 @@
     height: 30px;
     width: 300px;
     border: 1px solid black;
-    margin-left: 25px;
+    border-radius: 2px;
+    margin-left: 21px;
     font-weight: bold;
   }
   .OrderBY{
     height: 30px;
     width: 300px;
     border: 1px solid black;
-    margin-left: 16px;
+    border-radius: 2px;
+    margin-left: 16.5px;
     font-weight: bold;
   }
   .Annexure{
     height: 30px;
     width: 300px;
     border: 1px solid black;
-    margin-left: 10px;
+    border-radius: 2px;
+    margin-left: 11.5px;
     font-weight: bold;
   }
   .custom-datepickerF{
     width: 150px;
     border: 1px solid black;
+    border-radius: 2px;
     height: 30px;
     font-weight: bold;
     margin-left: 10px;
@@ -56,8 +60,9 @@
   .custom-datepickerU{
     width: 150px;
     border: 1px solid black;
+    border-radius: 2px;
     height: 30px;
     font-weight: bold;
-    margin-left: 42%;
+    margin-left: 37.8%;
     padding: 5px;
   }
