--- a/src/Screens/TrailBalance/TrailBalance.css
+++ b/src/Screens/TrailBalance/TrailBalance.css
@@ -29,8 +29,8 @@
 .value{
   border: 1px solid black;
   padding: 5px;
-  font-size: 19px;
-  font-weight: bold;
+  font-size: 17px;
+  font-weight: 450;
   width: 200px;
   height: 30px;
   border-radius: 4px;
