--- a/src/Screens/Sale/Sale.css
+++ b/src/Screens/Sale/Sale.css
@@ -21,6 +21,7 @@
 .DatePICKER{
   background-color: white;
   border: 1px solid #b8b8b8;
+  border-bottom: 3px solid grey;
   padding: 10px;
   font-size: 17px;
   outline: none;
@@ -29,6 +30,11 @@
   box-shadow: 0px 8px 16px rgba(1, 1, 1, 0.1);
   font-weight: bold;
   border-radius: 5px;
+}
+
+.DatePICKER:focus{
+  background-color: rgb(198, 199, 199);
+  border-bottom: 3px solid rgb(82, 82, 189);
 }
 
 .dueDatePICKER{
