--- a/src/Screens/TrailBalance/TrailBalance.css
+++ b/src/Screens/TrailBalance/TrailBalance.css
@@ -52,13 +52,13 @@
   max-height: 455px;
   overflow: auto;
 }
-.tableT{
-  max-height: 466px;
+.TableT{
+  max-height: 440px;
   overflow: auto;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .contMain{
-  height: 92vh;
+  /* height: 92vh; */
   margin-top: -12px;
   padding: 20px;
   box-shadow: 0px 8px 16px rgba(1, 1, 1, 0.5);
