--- a/src/Screens/TrailBalance/TrailBalance.css
+++ b/src/Screens/TrailBalance/TrailBalance.css
@@ -58,7 +58,7 @@
   margin-bottom: 5px;
 }
 .contMain{
-  /* height: 92vh; */
+  height: 92vh;
   margin-top: -12px;
   padding: 20px;
   box-shadow: 0px 8px 16px rgba(1, 1, 1, 0.5);
