--- a/src/Screens/OutStandingReports/outstanding.css
+++ b/src/Screens/OutStandingReports/outstanding.css
@@ -23,3 +23,40 @@
     margin-left: 32px;
     font-weight: bold;
 }
+
+.agent{
+    height: 30px;
+    width: 300px;
+    border: 1px solid black;
+    border-radius: 2px;
+    margin-left: 34px;
+    font-weight: bold;
+    padding-left: 5px;
+}
+.city{
+    height: 30px;
+    width: 300px;
+    border: 1px solid black;
+    border-radius: 2px;
+    margin-left: 46px;
+    font-weight: bold;
+    padding-left: 5px;
+}
+.state{
+    height: 30px;
+    width: 300px;
+    border: 1px solid black;
+    border-radius: 2px;
+    margin-left: 38px;
+    font-weight: bold;
+    padding-left: 5px;
+}
+.area{
+    height: 30px;
+    width: 300px;
+    border: 1px solid black;
+    border-radius: 2px;
+    margin-left: 42px;
+    font-weight: bold;
+    padding-left: 5px;
+}
