--- a/src/Screens/BankVoucher/BankVoucher.css
+++ b/src/Screens/BankVoucher/BankVoucher.css
@@ -15,7 +15,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: white;
+    background-color: transparent;
     /* or any other background color */
     z-index: 1000;
     /* To make sure it stays on top */
