--- a/src/Screens/Summary/summary.module.css
+++ b/src/Screens/Summary/summary.module.css
@@ -1,3 +1,44 @@
+.cardContainer{
+    padding: 20px;
+}
 .cardSumm{
     padding: 20px;
+}
+
+.activeRow {
+  background-color: #ffeeba !important;
+  font-weight: bold;
+}
+
+.headerSummary{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 30px;
+  text-align: center;
+  background: linear-gradient(to right, #8357eb, #30c9c9);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-weight: bold;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+}
+.tables{
+  max-height: 300px;
+  overflow-y: auto;
+  font-size: 18px;
+}
+.filters{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.Taxtype{
+    border: 1px solid black;
+    height: 40px;
+    width: 250px;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+    padding-left: 5px;
 }
