--- a/src/Screens/Summary/summary.module.css
+++ b/src/Screens/Summary/summary.module.css
@@ -23,9 +23,10 @@
   margin-bottom: 10px;
 }
 .tables{
-  max-height: 300px;
+  max-height: 350px;
   overflow-y: auto;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 .filters{
     display: flex;
