--- a/src/Screens/TdsVoucher/TdsVoucher.css
+++ b/src/Screens/TdsVoucher/TdsVoucher.css
@@ -10,6 +10,13 @@ text {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
+  margin-top: 20px;
+}
+.Right{
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-top: 22px;
 }
 
 .TdsBlock{
@@ -25,20 +32,65 @@ margin-top: 20px;
   outline: none;
   font-weight: bold;
   width: 150px;
-  height: 35px;
+  height: 40px;
   border-radius: 5px;
+}
+.datepickerVoucher:focus{
+  background-color: rgb(198, 199, 199);
+  border-bottom: 3px solid rgb(82, 82, 189);
+}
+
+.erp-input {
+  position: relative;
+  width: 225px;
+}
+
+.erp-label {
+  position: absolute;
+  top: 2px;
+  left: 10px;
+  font-size: 12px;
+  color: #333;
+  font-weight: bold;
+  pointer-events: none;
+}
+
+/* YOUR FIELD STYLE */
+.custom-style {
+  border: 1px solid rgb(158, 156, 156);
+  
+  font-size: 17px;
+  font-weight: bold;
+  width: 225px;
+  height: 45px;
+  border-radius: 5px;
+  outline: none;
+  background: white;
+}
+
+/* Disabled look */
+.erp-input.disabled .custom-style {
+  background-color: white;
+}
+
+.erp-input:focus-within .custom-style {
+  background-color: rgb(198, 199, 199);
+  border-bottom: 3px solid rgb(82, 82, 189);
 }
 
 .custom-datepickerTDS {
-  border: 1px solid black;
+  border: 1px solid rgb(158, 156, 156);
   padding: 5px;
   font-size: 17px;
   outline: none;
   font-weight: bold;
   width: 225px;
-  height: 20px;
-  margin-left: 44px;
+  height: 45px;
   border-radius: 5px;
+}
+.custom-datepickerTDS:focus{
+  background-color: rgb(198, 199, 199);
+  border-bottom: 3px solid rgb(82, 82, 189);
 }
 
 .custom-datepickerInvo {
