--- a/src/Screens/Purchase/Purchase.css
+++ b/src/Screens/Purchase/Purchase.css
@@ -17,6 +17,44 @@
   margin-left: 43%;
 }
 
+.erp-input3 {
+  position: relative;
+  width: 165px;
+}
+
+.erp-label3 {
+  position: absolute;
+  top: 2px;
+  left: 10px;
+  font-size: 12px;
+  color: #333;
+  font-weight: bold;
+  pointer-events: none;
+}
+
+/* YOUR FIELD STYLE */
+.custom-style3 {
+  border: 1px solid rgb(158, 156, 156);
+  font-size: 17px;
+  font-weight: bold;
+  width: 165px;
+  height: 48px;
+  border-radius: 5px;
+  outline: none;
+  background: white;
+  padding: 18px 10px 6px 10px; /* top right bottom left */
+  box-sizing: border-box;
+}
+
+/* Disabled look */
+.erp-input3.disabled .custom-style3 {
+  background-color: white;
+}
+
+.erp-input3:focus-within .custom-style3 {
+  background-color: rgb(198, 199, 199);
+  border-bottom: 3px solid rgb(82, 82, 189);
+}
 .custom-datepickerr {
   border: 1px solid black;
   padding: 5px;
@@ -507,7 +545,7 @@
   border: 1px solid #000000;
   background-color: rgb(240, 235, 235);
   padding: 10px;
-  width: 120px;
+  width: 165px;
   margin-left: 10px;
   outline: none;
   font-weight: bold;
