--- a/src/Screens/Sale/Sale.css
+++ b/src/Screens/Sale/Sale.css
@@ -17,6 +17,49 @@
   overflow: auto;
   background-color: transparent;
 }
+.Parent{
+  display: flex;
+  flex-direction: row;
+}
+
+.erp-input2 {
+  position: relative;
+  width: 225px;
+}
+
+.erp-label2 {
+  position: absolute;
+  top: 2px;
+  left: 10px;
+  font-size: 12px;
+  color: #333;
+  font-weight: bold;
+  pointer-events: none;
+}
+
+/* YOUR FIELD STYLE */
+.custom-style2 {
+  border: 1px solid rgb(158, 156, 156);
+  font-size: 17px;
+  font-weight: bold;
+  width: 225px;
+  height: 45px;
+  border-radius: 5px;
+  outline: none;
+  background: white;
+  padding: 18px 10px 6px 10px; /* top right bottom left */
+  box-sizing: border-box;
+}
+
+/* Disabled look */
+.erp-input2.disabled .custom-style2 {
+  background-color: white;
+}
+
+.erp-input2:focus-within .custom-style2 {
+  background-color: rgb(198, 199, 199);
+  border-bottom: 3px solid rgb(82, 82, 189);
+}
 
 .DatePICKER{
   background-color: white;
@@ -37,13 +80,13 @@
   border-bottom: 3px solid rgb(82, 82, 189);
 }
 
-.dueDatePICKER{
+.dueDatePICKERz{
   background-color: white;
   border: 1px solid #b8b8b8;
   padding: 5px;
   outline: none;
   width: 150px;
-  height: 10px;
+  height: 40px;
   box-shadow: 0px 8px 16px rgba(1, 1, 1, 0.1);
   font-weight: bold;
   border-radius: 5px;
@@ -1042,10 +1085,17 @@ flex-direction: column;
   width: 80px;
 }
 .TCSPER{
-  width: 120px;
+  width: 145px;
 }
 .CTDS{
   width: 120px;
+}
+
+.totals{
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: 12px;
 }
 /* Media query for max-width:768px */
 @media (max-width: 768px) {
@@ -1076,6 +1126,11 @@ flex-direction: column;
 
   .Belowcontents {
     position: static;
+  }
+
+  .Parent{
+    display: flex;
+    flex-direction: column;
   }
 
   .headerSale {
@@ -1534,7 +1589,7 @@ flex-direction: column;
     margin-top: 28px;
   }
 
-  .dueDatePICKER{
+  .dueDatePICKERz{
   background-color: white;
   border: 1px solid #b8b8b8;
   padding: 5px;
@@ -1544,6 +1599,12 @@ flex-direction: column;
   box-shadow: 0px 8px 16px rgba(1, 1, 1, 0.1);
   font-weight: bold;
   border-radius: 5px;
+}
+
+.totals{
+  display: flex;
+  flex-direction: column;
+  margin-left: 5px;
 }
   
 }
@@ -1594,6 +1655,11 @@ flex-direction: column;
   .Belowcontents {
     position: static;
 
+  }
+
+  .Parent{
+    display: flex;
+    flex-direction: column;
   }
 
   .topz {
