--- a/src/Screens/Sale/Sale.css
+++ b/src/Screens/Sale/Sale.css
@@ -415,7 +415,7 @@
   font-size: 20px;
   letter-spacing: 2px;
   background-color: transparent;
-  background-image: linear-gradient(to bottom,#fac45f, #faeaea );
+  background-image: linear-gradient(to bottom,skyblue, skyblue );
   width: 130px;
   color: #482307;
   font-weight: 600;
