--- a/src/Screens/SideDrawer/NewModal.css
+++ b/src/Screens/SideDrawer/NewModal.css
@@ -5,7 +5,7 @@
   position: fixed;
   z-index: 1000;
   /* Increase the z-index value */
-  left: 20;
+  /* left: 20; */
   top: 0;
   width: 95%;
   height: 90%;
@@ -15,6 +15,7 @@
   border: 1px solid black;
   box-shadow: 0px 8px 16px rgba(252, 0, 0, 0.3);
   margin-top: 30px;
+  margin-left: 30px;
   border-radius: 20px;
 }
 
